test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/test_for_memory_leaks.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[252]:
  void
  identifier(exit)
  (
  int
  identifier(status)
  )
  ;
  long
  identifier(sum)
  =
  const int(0)
  ;
  void
  identifier(lots_of_args)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  ,
  int
  identifier(e)
  ,
  int
  identifier(f)
  ,
  int
  identifier(g)
  ,
  int
  identifier(h)
  ,
  int
  identifier(i)
  ,
  int
  identifier(j)
  ,
  int
  identifier(k)
  ,
  int
  identifier(l)
  ,
  int
  identifier(m)
  ,
  int
  identifier(n)
  ,
  int
  identifier(o)
  )
  {
  if
  (
  identifier(a)
  !=
  const int(1)
  )
  {
  identifier(exit)
  (
  const int(1)
  )
  ;
  }
  if
  (
  identifier(b)
  !=
  const int(2)
  )
  {
  identifier(exit)
  (
  const int(2)
  )
  ;
  }
  if
  (
  identifier(c)
  !=
  const int(3)
  )
  {
  identifier(exit)
  (
  const int(3)
  )
  ;
  }
  if
  (
  identifier(d)
  !=
  const int(4)
  )
  {
  identifier(exit)
  (
  const int(4)
  )
  ;
  }
  if
  (
  identifier(e)
  !=
  const int(5)
  )
  {
  identifier(exit)
  (
  const int(5)
  )
  ;
  }
  if
  (
  identifier(f)
  !=
  const int(6)
  )
  {
  identifier(exit)
  (
  const int(6)
  )
  ;
  }
  if
  (
  identifier(g)
  !=
  const int(7)
  )
  {
  identifier(exit)
  (
  const int(7)
  )
  ;
  }
  if
  (
  identifier(h)
  !=
  const int(8)
  )
  {
  identifier(exit)
  (
  const int(8)
  )
  ;
  }
  if
  (
  identifier(i)
  !=
  const int(9)
  )
  {
  identifier(exit)
  (
  const int(9)
  )
  ;
  }
  if
  (
  identifier(j)
  !=
  const int(10)
  )
  {
  identifier(exit)
  (
  const int(10)
  )
  ;
  }
  if
  (
  identifier(k)
  !=
  const int(11)
  )
  {
  identifier(exit)
  (
  const int(11)
  )
  ;
  }
  if
  (
  identifier(l)
  !=
  const int(12)
  )
  {
  identifier(exit)
  (
  const int(12)
  )
  ;
  }
  if
  (
  identifier(m)
  !=
  const int(13)
  )
  {
  identifier(exit)
  (
  const int(13)
  )
  ;
  }
  if
  (
  identifier(n)
  !=
  const int(14)
  )
  {
  identifier(exit)
  (
  const int(14)
  )
  ;
  }
  identifier(sum)
  =
  identifier(sum)
  +
  identifier(o)
  ;
  return
  ;
  }
