test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/extra_credit/compound_void_rval_bitshift.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  void
  identifier(f)
  (
  void
  )
  {
  return
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(10)
  ;
  identifier(x)
  >>=
  identifier(f)
  (
  )
  ;
  return
  const int(0)
  ;
  }
